--- a/ProQuant/ProQuant/src/main/webapp/pages/MarketPage.html
+++ b/ProQuant/ProQuant/src/main/webapp/pages/MarketPage.html
@@ -11,8 +11,9 @@
     <link href="../css/myCSS/nav_footerCSS.css" rel="stylesheet">
     <script type="text/javascript" src="../js/echarts.min.js"></script>
     <script src="../js/jquery-3.2.1.js"></script>
-    <!--<script src="../js/bootstrap.min.js"></script>-->
-    <!--<script src="../js/header.js"></script>-->
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/header.js"></script>
+    <script src="../js/myJS/MarketJS.js" type="text/javascript"></script>
 </head>
 <body>
     <!--导航栏start-->
@@ -43,9 +44,8 @@
             </div>
             <div class="m-body">
                 <div class="market-tab">
-                    <span class="cur">成交量</span>
-                    <span>涨跌停</span>
-                    <span>涨跌>5%</span>
+                    <span class="cur" id="zhangdie-tab">涨跌分布</span>
+                    <span id="zhangdieting-tab">涨跌停</span>
                     <input type="date" class="my-date-picker">
                 </div>
                 <div class=" hcharts clearfix">
@@ -66,10 +66,14 @@
                                 <!--</p>-->
                             <!--</div>-->
                         <!--</div>-->
-                        <!--中间放置图的部分-->
-                        <div class="hcharts-cont tab-hv-cont">
-                            <div class="hcharts-legend"></div>
-                            <div class="hcharts-main" id="zdfb"></div>
+                        <div class="hcharts-cont tab-hv-cont" id="top-image-holder">
+                            <!--<div class="hcharts-legend"></div>-->
+                            <div class="" id="zdfb">
+                                <p>这里放置涨跌分布的直方图</p>
+                            </div>
+                            <div class="disappear" id="zdt">
+                                <p>这里放置涨跌停的折线图</p>
+                            </div>
                         </div>
                     </div>
                     <div class="hcharts-right">
@@ -250,30 +254,30 @@
                         <a href="javascript: void(0)" board="all">中小板</a>
                     </h4>
                 </div>
-                <div class="fixed_thead hide" style="display: none;">
-                    <table class="m-table m-pager-table">
-                        <thead>
-                            <tr>
-                                <th style="width: 44px;">序号</th>
-                                <th style="width: 68px;">代码</th>
-                                <th style="width: 92px;">名称</th>
-                                <th style="width: 68px;"><a href="javascript:void(0)" field="xj">现价<i></i></a></th>
-                                <th style="width: 92px;" class="cur"><a href="javascript:void(0)" field="zdf" order="desc" class="desc">涨跌幅(%)<i></i></a></th>
-                                <th style="width: 68px;"><a href="javascript:void(0)" field="zd">涨跌<i></i></a></th>
-                                <th style="width: 92px;"><a href="javascript:void(0)" field="zs">涨速(%)<i></i></a></th>
-                                <th style="width: 92px;"><a href="javascript:void(0)" field="hs">换手(%)<i></i></a></th>
-                                <th style="width: 68px;"><a href="javascript:void(0)" field="lb">量比<i></i></a></th>
-                                <th style="width: 68px;"><a href="javascript:void(0)" field="zf">振幅(%)<i></i></a></th>
-                                <th style="width: 80px;"><a href="javascript:void(0)" field="cje">成交额<i></i></a></th>
-                                <th style="width: 92px;"><a href="javascript:void(0)" field="ltg">流通股<i></i></a></th>
-                                <th style="width: 92px;"><a href="javascript:void(0)" field="ltsz">流通市值<i></i></a></th>
-                                <th style="width: 80px;"><a href="javascript:void(0)" field="syl">市盈率<i></i></a></th>
-                                <!--th>概念题材</th-->
-                                <th style="width: 44px;">加自选</th>
-                            </tr>
-                        </thead>
-                    </table>
-                </div>
+                <!--<div class="fixed_thead hide" style="display: none;">-->
+                    <!--<table class="m-table m-pager-table">-->
+                        <!--<thead>-->
+                            <!--<tr>-->
+                                <!--<th style="width: 44px;">序号</th>-->
+                                <!--<th style="width: 68px;">代码</th>-->
+                                <!--<th style="width: 92px;">名称</th>-->
+                                <!--<th style="width: 68px;"><a href="javascript:void(0)" field="xj">现价<i></i></a></th>-->
+                                <!--<th style="width: 92px;" class="cur"><a href="javascript:void(0)" field="zdf" order="desc" class="desc">涨跌幅(%)<i></i></a></th>-->
+                                <!--<th style="width: 68px;"><a href="javascript:void(0)" field="zd">涨跌<i></i></a></th>-->
+                                <!--<th style="width: 92px;"><a href="javascript:void(0)" field="zs">涨速(%)<i></i></a></th>-->
+                                <!--<th style="width: 92px;"><a href="javascript:void(0)" field="hs">换手(%)<i></i></a></th>-->
+                                <!--<th style="width: 68px;"><a href="javascript:void(0)" field="lb">量比<i></i></a></th>-->
+                                <!--<th style="width: 68px;"><a href="javascript:void(0)" field="zf">振幅(%)<i></i></a></th>-->
+                                <!--<th style="width: 80px;"><a href="javascript:void(0)" field="cje">成交额<i></i></a></th>-->
+                                <!--<th style="width: 92px;"><a href="javascript:void(0)" field="ltg">流通股<i></i></a></th>-->
+                                <!--<th style="width: 92px;"><a href="javascript:void(0)" field="ltsz">流通市值<i></i></a></th>-->
+                                <!--<th style="width: 80px;"><a href="javascript:void(0)" field="syl">市盈率<i></i></a></th>-->
+                                <!--&lt;!&ndash;th>概念题材</th&ndash;&gt;-->
+                                <!--<th style="width: 44px;">加自选</th>-->
+                            <!--</tr>-->
+                        <!--</thead>-->
+                    <!--</table>-->
+                <!--</div>-->
                 <div id="maincont" data-fixedthead="true">
                     <table class="m-table m-pager-table">
                         <thead>
@@ -711,26 +715,28 @@
         </div>
     </div>
     <!--页脚start-->
-    <div class="footer">
-        <div class="left-footer">
-            <div>
-                <h2>关于ProQuant</h2>
-                <br>
-                <p>ProQuant是一款基于提供股票市场情况展示，个股信息展示，股票各项指标预测功能于一体的多功能股票查询、
-                    <br>分析的软件。</p>
+    <div class="footer  container">
+        <div class="row">
+            <div class="left-footer col-sm-9">
+                <div>
+                    <h2>关于ProQuant</h2>
+                    <br>
+                    <p>ProQuant是一款基于提供股票市场情况展示，个股信息展示，股票各项指标预测功能于一体的多功能股票查询、
+                        <br>分析的软件。</p>
+                </div>
             </div>
-        </div>
-        <div class="right-footer">
-            <div>
-                <h2>关于我们</h2>
-                <br>
-                <p></p>
-            </div>
-            <div>
-                <a href="../images/myWEIBO."><img src="../images/weibo.png" alt="微博"></a>
-                <a href=""><img src="../images/weixin.png" alt="微信"></a>
-                <a href=""><img src="../images/qq.png" alt="QQ"></a>
+            <div class="right-footer col-sm-3">
+                <div>
+                    <h2>关于我们</h2>
+                    <br>
+                    <p></p>
+                </div>
+                <div>
+                    <a href=""><img src="../images/weibo.png" alt="微博"></a>
+                    <a href=""><img src="../images/weixin.png" alt="微信"></a>
+                    <a href=""><img src="../images/qq.png" alt="QQ"></a>
 
+                </div>
             </div>
         </div>
     </div>
