--- a/ProQuant/ProQuant/src/main/webapp/pages/StockInfo.html
+++ b/ProQuant/ProQuant/src/main/webapp/pages/StockInfo.html
@@ -527,36 +527,49 @@
 
 <div style="margin-bottom: 50px;" class="buy-page-holder disappear">
     <div class="top-triangle"><!--本Div只来实现三角形，无其他作用--></div>
-    <div style="overflow: hidden;display: inline-block;padding: 10px">
+    <div style="background-color: white;overflow: hidden;display: inline-block;padding: 10px">
+        <div>
+            <div style="padding-top:7px;border: 1.5px solid #dddddd;border-radius: 2px;color: #333;height: 40px;display: inline-block;text-align: center;float: left;width: 200px">
+                <span style="margin-left: 10px;padding-right: 10px;font-size: 18px;">价 格</span>
+                <img src="../images/line.svg">
+                <span style="margin-right: 30px;font-size: 18px;">45.78</span>
+            </div>
+            <div style="display: inline-block;float: left">
+                <button class="addPriceButton">
+                    <img src="../images/reducePrice.svg">
+                    <span style="font-size: 10px;color: #3999ff">0.01</span>
+                </button>
+            </div>
+            <div style="display: inline-block;float: left">
+                <button class="addPriceButton">
+                    <img src="../images/addPrice.svg">
+                    <span style="font-size: 10px;color:#3999ff">0.01</span>
+                </button>
+            </div>
+        </div>
+        <div>
+            <span style="font-size: 12px;background-color:#EBF5FF;float: left;margin-top: 5px;margin-bottom: 5px">跌停价：<span style="color: #008000;">41.37</span></span>
+            <span style="font-size: 12px;float: right;background-color: #EBF5FF;margin-top: 5px;margin-bottom: 5px">涨停价：<span style="color: #C10D01;">50.57</span></span>
+        </div>
 
-        <div style="overflow: hidden">
+        <div>
             <div style="padding-top:7px;border: 1.5px solid #dddddd;border-radius: 2px;color: #333;height: 40px;display: inline-block;text-align: center;float: left;width: 200px">
                 <span style="margin-left: 10px;padding-right: 10px;font-size: 18px;">数 量</span>
                 <img src="../images/line.svg">
                 <span style="margin-right: 30px;font-size: 18px;">2100</span>
             </div>
-            <div style="display: inline-block;">
+            <div style="display: inline-block;float: left">
                 <button class="addPriceButton">
                     <img src="../images/reducePrice.svg">
                     <span style="font-size: 10px;color: #3999ff">100</span>
                 </button>
             </div>
-            <div style="display: inline-block;">
+            <div style="display: inline-block;float: left">
                 <button class="addPriceButton">
                     <img src="../images/addPrice.svg">
                     <span style="font-size: 10px;color:#3999ff">100</span>
                 </button>
             </div>
-        </div>
-        <!--<div style="padding: 0">-->
-
-        <!--</div>-->
-        <div style="margin-top: 5px">
-            <span style="font-size: 12px;margin-bottom: 5px;margin-right: 20px">最大数量：<span style="color: #3999FF;">41,839</span></span>
-            <span style="font-size: 12px;margin-bottom: 5px">可用资金：<span style="color: #3999FF;">￥1,954,061</span></span>
-        </div>
-        <div>
-            <button style="float: right" id="buyConfirmButton">确认</button>
         </div>
 
     </div>
