--- a/ProQuant/ProQuant/src/main/webapp/pages/StrategyPage.html
+++ b/ProQuant/ProQuant/src/main/webapp/pages/StrategyPage.html
@@ -369,26 +369,28 @@
 
     </div>
     <!--页脚start-->
-    <div class="footer">
-        <div class="left-footer">
-            <div>
-                <h2>关于ProQuant</h2>
-                <br>
-                <p>ProQuant是一款基于提供股票市场情况展示，个股信息展示，股票各项指标预测功能于一体的多功能股票查询、
-                    <br>分析的软件。</p>
+    <div class="footer  container">
+        <div class="row">
+            <div class="left-footer col-sm-9">
+                <div>
+                    <h2>关于ProQuant</h2>
+                    <br>
+                    <p>ProQuant是一款基于提供股票市场情况展示，个股信息展示，股票各项指标预测功能于一体的多功能股票查询、
+                        <br>分析的软件。</p>
+                </div>
             </div>
-        </div>
-        <div class="right-footer">
-            <div>
-                <h2>关于我们</h2>
-                <br>
-                <p></p>
-            </div>
-            <div>
-                <a href=""><img src="../images/weibo.png" alt="微博"></a>
-                <a href=""><img src="../images/weixin.png" alt="微信"></a>
-                <a href=""><img src="../images/qq.png" alt="QQ"></a>
+            <div class="right-footer col-sm-3">
+                <div>
+                    <h2>关于我们</h2>
+                    <br>
+                    <p></p>
+                </div>
+                <div>
+                    <a href=""><img src="../images/weibo.png" alt="微博"></a>
+                    <a href=""><img src="../images/weixin.png" alt="微信"></a>
+                    <a href=""><img src="../images/qq.png" alt="QQ"></a>
 
+                </div>
             </div>
         </div>
     </div>
