--- a/ProQuant/ProQuant/src/main/webapp/pages/UserCenterPage2.html
+++ b/ProQuant/ProQuant/src/main/webapp/pages/UserCenterPage2.html
@@ -529,7 +529,7 @@
                         <thead>
                         <tr>
                             <th>序号</th>
-                            <th>策略名称</th>
+                            <th>策略算法</th>
                             <th>开始时间</th>
                             <th>结束时间</th>
                             <th>股票池</th>
