--- a/ProQuant/ProQuant/src/main/webapp/pages/HomePage.html
+++ b/ProQuant/ProQuant/src/main/webapp/pages/HomePage.html
@@ -116,7 +116,7 @@
         <!--<div class="col-sm-4" style="background-color:lavenderblush;">欢迎来到ProQuant</div>-->
         <!--<div class="col-sm-1"></div>-->
         <div>
-            <canvas id="nokey" style="position: absolute;z-index: -1;width: 800px;height: 500px"></canvas>
+            <canvas id="nokey" style="position: absolute;z-index: 0;width: 800px;height: 500px;left: 0;top: 0;"></canvas>
             <svg style="display: inline-block;" version="1.1"
                     xmlns="http://www.w3.org/2000/svg"
                     x="0px" y="0px" width="200px" viewBox="0 0 48 34" enable-background="new 0 0 48 34" xml:space="preserve">
