--- a/ProQuant/ProQuant/src/main/webapp/pages/UserCenterPage2.html
+++ b/ProQuant/ProQuant/src/main/webapp/pages/UserCenterPage2.html
@@ -103,10 +103,10 @@
                                 }
                             </script>
                             <h4><a href="#" id="popover" data-title="货币类型" data-content="<a href='#' id='cnyLink' style='cursor: pointer' onclick='changeToCNY()'>人民币CNY</a></br><a href='#' id='usdLink' style='cursor: pointer' onclick='changeToUSD()'>美元USD</a>" data-placement="right">总资产-人民币计 ∨</a></h4>
-                            <h2 id="totalAssets">￥2,000,000</h2>
+                            <h2 id="totalProperty">￥2,000,000</h2>
                             <div class="user-item">
                                 <h2>可用现金</h2>
-                                <div><h4>￥1,999,999</h4></div>
+                                <div><h4 id="availableProperty">￥1,999,999</h4></div>
                             </div>
                             <div class="user-item">
                                 <h2>总盈亏</h2>
@@ -135,6 +135,7 @@
                             <th>最新价</th>
                             <th>持仓数量</th>
                             <th>浮动盈亏</th>
+                            <th>卖出</th>
                         </tr>
                         </thead>
                         <tbody>
@@ -143,84 +144,154 @@
                             <td>44.96</td>
                             <td>1000</td>
                             <td>-960</td>
+                            <td>
+                                <a title="sellButton">
+                                    <img src="../images/sell.svg" alt="卖出">
+                                </a>
+                            </td>
                         </tr>
                         <tr>
                             <td>百度</td>
                             <td>44.96</td>
                             <td>1000</td>
                             <td>-960</td>
+                            <td>
+                                <a title="sellButton">
+                                    <img src="../images/sell.svg" alt="卖出">
+                                </a>
+                            </td>
                         </tr>
                         <tr>
                             <td>腾讯</td>
                             <td>44.96</td>
                             <td>1000</td>
                             <td>-960</td>
+                            <td>
+                                <a title="sellButton">
+                                    <img src="../images/sell.svg" alt="卖出">
+                                </a>
+                            </td>
                         </tr>
                         <tr>
                             <td>谷歌</td>
                             <td>44.96</td>
                             <td>1000</td>
                             <td>-960</td>
+                            <td>
+                                <a title="sellButton">
+                                    <img src="../images/sell.svg" alt="卖出">
+                                </a>
+                            </td>
                         </tr>
                         <tr>
                             <td>苹果</td>
                             <td>44.96</td>
                             <td>1000</td>
                             <td>-960</td>
+                            <td>
+                                <a title="sellButton">
+                                    <img src="../images/sell.svg" alt="卖出">
+                                </a>
+                            </td>
                         </tr>
                         <tr>
                             <td>亚马逊</td>
                             <td>44.96</td>
                             <td>1000</td>
                             <td>-960</td>
+                            <td>
+                                <a title="sellButton">
+                                    <img src="../images/sell.svg" alt="卖出">
+                                </a>
+                            </td>
                         </tr>
                         <tr>
                             <td>Facebook</td>
                             <td>44.96</td>
                             <td>1000</td>
                             <td>-960</td>
+                            <td>
+                                <a title="sellButton">
+                                    <img src="../images/sell.svg" alt="卖出">
+                                </a>
+                            </td>
                         </tr>
                         <tr>
                             <td>IBM</td>
                             <td>44.96</td>
                             <td>1000</td>
                             <td>-960</td>
+                            <td>
+                                <a title="sellButton">
+                                    <img src="../images/sell.svg" alt="卖出">
+                                </a>
+                            </td>
                         </tr>
                         <tr>
                             <td>三星</td>
                             <td>44.96</td>
                             <td>1000</td>
                             <td>-960</td>
+                            <td>
+                                <a title="sellButton">
+                                    <img src="../images/sell.svg" alt="卖出">
+                                </a>
+                            </td>
                         </tr>
                         <tr>
                             <td>小米</td>
                             <td>44.96</td>
                             <td>1000</td>
                             <td>-960</td>
+                            <td>
+                                <a title="sellButton">
+                                    <img src="../images/sell.svg" alt="卖出">
+                                </a>
+                            </td>
                         </tr>
                         <tr>
                             <td>华为</td>
                             <td>44.96</td>
                             <td>1000</td>
                             <td>-960</td>
+                            <td>
+                                <a title="sellButton">
+                                    <img src="../images/sell.svg" alt="卖出">
+                                </a>
+                            </td>
                         </tr>
                         <tr>
                             <td>华为</td>
                             <td>44.96</td>
                             <td>1000</td>
                             <td>-960</td>
+                            <td>
+                                <a title="sellButton">
+                                    <img src="../images/sell.svg" alt="卖出">
+                                </a>
+                            </td>
                         </tr>
                         <tr>
                             <td>华为</td>
                             <td>44.96</td>
                             <td>1000</td>
                             <td>-960</td>
+                            <td>
+                                <a title="sellButton">
+                                    <img src="../images/sell.svg" alt="卖出">
+                                </a>
+                            </td>
                         </tr>
                         <tr>
                             <td>华为</td>
                             <td>44.96</td>
                             <td>1000</td>
                             <td>-960</td>
+                            <td>
+                                <a title="sellButton">
+                                    <img src="../images/sell.svg" alt="卖出">
+                                </a>
+                            </td>
                         </tr>
                         </tbody>
                     </table>
